<resources>
    <string name="app_name">Exatech</string>
    <string name="login">LOGIN</string>
    <string name="loginLable">Vendor Management &amp; Settlement Service System</string>
    <string name="enter_access_code">Enter your Access Code</string>
    <string name="enter_current_access_code">Enter your Current Access Code</string>
    <string name="enter_new_access_code">Enter your New Access Code</string>
    <string name="confirm_new_access_code">Confirm your New Access Code</string>
    <string name="forgot_access_code">Forgot Access Code?</string>

    <!--menu item name-->
    <string name="dashboard">Dashboard</string>
    <string name="my_order">My Orders</string>
    <string name="accept_order">Accept Orders</string>
    <string name="out_of_office">Out Of Office</string>
    <string name="organization">Organization</string>
    <string name="attention_required">Attention Required</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--About hints-->
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="vendorId">Vendor ID</string>
    <string name="serviceType">Service Type</string>
    <string name="vendorName">Vendor Name</string>
    <string name="onVacation">On Vacation?</string>

    <!--My Order lables-->
    <string name="orderId">Order Id :</string>
    <string name="openOrder">Open \nOrders</string>
    <string name="lateOrder">Late \nOrders</string>
    <string name="revisedOrder">Revised \nOrders</string>
    <!--Product detail lables-->

    <string name="detail">Details</string>
    <string name="orderID">Order ID</string>
    <string name="product">Product</string>
    <string name="borrower">Borrower</string>
    <string name="assignDate">Assign Date</string>
    <string name="dueDate">Due By Date</string>
    <!--Customer Details lables-->
    <string name="customer">Customer</string>

    <!--Other Functions lables-->
    <string name="otherFunction">Other Functions</string>
    <string name="messages">Messages</string>
    <string name="documents">Documents</string>
    <string name="setInspection">Set Inspection</string>
    <!--Book Appoinment-->
    <string name="appoinmentDte">Appoinment Date:</string>
    <string name="comments">Comments:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <!--Accept Order-->
    <string name="orderToReview">Order to review</string>
    <string name="conditional">Conditional</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>

    <!--Attention Required tab-->
    <string name="inspections">Inspections</string>
    <!--Order Documents-->
    <string name="order">Order</string>
    <string name="document">Document</string>
    <!--Toolbar Titles-->
    <string name="orderList">ORDER LIST</string>
    <string name="myOrders">MY ORDERS</string>
    <string name="acceptOrder">ACCEPT ORDERS</string>
    <string name="inspection">INSPECTIONS</string>
    <string name="documentsTitle">DOCUMENTS</string>
    <string name="outOfOfiice">OUT OF OFFICE</string>
    <string name="organizations">ORGANIZATIONS</string>
    <string name="attentionRequired">ATTENTION REQUIRED</string>
    <string name="aboutUs">ABOUT US</string>
    <string name="settingsTitle">SETTINGS</string>
    <string name="orderTitle">ORDER DETAILS</string>
    <string name="orderDocTitle">ORDER DOCUMENTS</string>
    <string name="messagesTitle">MESSAGES</string>
    <string name="searchFilter">SEARCH FILTER</string>
    <string-array name="dashboardItems">
        <item>Late Orders</item>
        <item>Inspections</item>
        <item>Open Orders</item>
        <item>Accept Orders</item>
        <item>Documents</item>
        <item>Revision Request</item>
    </string-array>

</resources>
