<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/dashboard"
                android:title="Dashboard"/>

    </group>
    <group>
        <item android:title=""
        >
            <menu>
                <item
                        android:id="@+id/myOrders"
                        android:title="@string/my_order"/>
                <item
                        android:id="@+id/acceptOrders"
                        android:title="@string/accept_order"/>
            </menu>
        </item>
    </group>

    <group>
        <item android:title=""
        >
            <menu>
                <item
                        android:id="@+id/outOfOffice"
                        android:title="@string/out_of_office"/>
                <item
                        android:id="@+id/organization"
                        android:title="@string/organization"/>
                <item
                        android:id="@+id/attentionRequired"
                        android:title="@string/attention_required"/>
            </menu>
        </item>
    </group>
    <group>
        <item android:title="">
            <menu>
                <item
                        android:id="@+id/about"
                        android:title="@string/about"/>
                <item
                        android:id="@+id/settings"
                        android:title="@string/settings"/>
                <item
                        android:id="@+id/signOut"
                        android:title="@string/sign_out"/>
            </menu>
        </item>
    </group>
</menu>
