<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                 android:id="@+id/frame">
        <ImageView android:layout_width="fill_parent" android:layout_height="@dimen/_180sdp"
                   android:src="@drawable/profile_bg_shape"
                   android:scaleType="fitXY"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical"

                      android:layout_marginTop="@dimen/_35sdp"
                      android:layout_marginLeft="@dimen/_10sdp"
                      android:layout_gravity="left">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="@dimen/_18sdp"
                      android:textColor="@android:color/white"
                      android:text="Marty J Frenzy"
                      android:id="@+id/txtName"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="@dimen/_15sdp"
                      android:textColor="@android:color/white"
                      android:text="mf@test.com"

            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="@dimen/_15sdp"
                      android:textColor="@android:color/white"
                      android:text="43434343433"
                      android:layout_marginTop="@dimen/_3sdp"

            />
        </LinearLayout>

        <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_gravity="end">
            <ImageView android:layout_width="@dimen/_120sdp" android:layout_height="@dimen/_120sdp"
                       android:layout_marginRight="@dimen/_15sdp"
                       android:layout_gravity="end"
                       android:background="@drawable/profile_circle"
                       android:layout_marginEnd="@dimen/_20sdp"
                       android:layout_marginTop="@dimen/_20sdp"
                       android:src="@drawable/profile_circle"
            />
            <com.mikhaellopez.circularimageview.CircularImageView android:layout_width="@dimen/_87sdp"
                                                                  android:layout_height="@dimen/_90sdp"
                                                                  android:layout_marginRight="@dimen/_36sdp"
                                                                  android:layout_gravity="end"
                                                                  android:layout_marginEnd="@dimen/_36sdp"
                                                                  android:layout_marginTop="@dimen/_37sdp"
                                                                  android:layout_marginBottom="@dimen/_43sdp"
                                                                  android:src="@drawable/profile_placeholder"
                                                                  android:id="@+id/imgProfile"


            />
           <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginRight="@dimen/_20sdp">
               <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:src="@drawable/back_circle"/>
               <ImageView android:layout_width="@dimen/_20sdp" android:layout_height="@dimen/_20sdp"
                          android:src="@drawable/img_camera"
                          android:id="@+id/img_camera"
                          android:layout_marginLeft="@dimen/_5sdp"
               android:layout_marginTop="@dimen/_5sdp"/>
           </FrameLayout>


        </FrameLayout>
    </FrameLayout>

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_below="@+id/frame">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:hint="@string/city">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:hint="@string/country"
                                                           android:layout_marginTop="@dimen/_5sdp">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:hint="@string/vendorId"
                                                           android:layout_marginTop="@dimen/_5sdp">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:hint="@string/serviceType"
                                                           android:layout_marginTop="@dimen/_5sdp">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:hint="@string/vendorName"
                                                           android:layout_marginTop="@dimen/_5sdp">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:hint="@string/onVacation"
                                                           android:layout_marginTop="@dimen/_5sdp">
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>