<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:padding="@dimen/_10sdp">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="No Document"
                  android:id="@+id/txtDocCount"
                  android:textSize="@dimen/_14sdp"

        />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/orderTitle"
                      android:text="@string/order"
                      android:textSize="@dimen/_16sdp"
                      android:textColor="@color/colorPrimary"
                      android:layout_marginTop="@dimen/_5sdp"

            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/orderDetail"
                      android:text="@string/detail"
                      android:textSize="@dimen/_16sdp"
                      android:textColor="@android:color/black"
                      android:layout_marginTop="@dimen/_5sdp"
                      android:layout_marginLeft="@dimen/_5sdp"
                      android:textStyle="bold|italic"

            />
        </LinearLayout>
        <include layout="@layout/row_my_orders"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></include>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="@dimen/_10sdp"
        >
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/DocumentTitle"
                      android:text="@string/document"
                      android:textSize="@dimen/_16sdp"
                      android:textColor="@color/colorPrimary"
                      android:layout_marginTop="@dimen/_5sdp"

            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/docListTitle"
                      android:text="@string/detail"
                      android:textSize="@dimen/_16sdp"
                      android:textColor="@android:color/black"
                      android:layout_marginTop="@dimen/_5sdp"
                      android:layout_marginLeft="@dimen/_5sdp"
                      android:textStyle="bold|italic"

            />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="@dimen/_10sdp"
                                                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        ></android.support.v7.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>